﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.11...]
### 2018-09-19
	Fixed: Some internal locking. Should behave better in corner cases.
	Fixed: Exit behaviour. Should be more consistent.
	Fixed: Admin elevation from command-line arguments should be more reliable and not cause TM to just vanish on occasion.
### 2018-09-08
	Fixed: Potential permanent resource leakage related to static event handlers.
	Changed: IP changes are now in Info logging level instead of Debug.
	Added: Option to show affinity mask as bitmask or as decimal. Defaults to decimal. Bitmask is also no longer in reversed order.
	Changed: UI no longer shows "-- Any --" when nothing is configured and instead shows simply nothing.
	Added: Properties.Settings is now used for some configuration options, namely the new affinity mask option.
		This has some problems associated with it and may be transferred to the old .ini format.
### 2018-08-28
	Fixed: If no default microphone is set up, microphone manager won't crash the entire app.
	Added: Detect session end for clean shutdown.
### 2018-08-26
	Added: Total network device errors shown after deltas.
### 2018-07-20
	Fixed: An error retrieving process information when the process has already exited in foreground hang detector.
		Checked for other potential similar instances.
### 2018-07-17
	Fixed: An error retrieving process information when the process has already exited.
### 2018-07-08
	Added: Audio session management. `Watchlist.ini´ now has secret options `Volume´ and `Volume strategy´.
		Volume is floating point number from 0 to 1.
		Volume strategy ranges from 0 to 3. Meanings as follows: 0 = Ignore (default), 1 = Decrease, 2 = Increase, 3 = Either.
	Fixed: NullReferenceException that was introduced on same day update.

### 2018-07-03
	Fixed: Unhandled process exit is now handled.
### 2018-07-02
	Changed: Some debug output for monitor power states.
### 2018-06-30